@@ -15,7 +15,7 @@ Formerly known as fhz1000.pl
 
 <h2>News (as of =DATE=, Version =VERS=)</h2>
 <ul>
-	
+  <li>feature: added ELV IPWE-Support via 88_IPWE.pm (thomas 18.05.08)</li>
   <li>feature: added windows COM-Port support to FHZ, EM,WS2000,WS300 (thomas 12.05.08)</li>
   <li>feature: added ReadyFn to have an alternate methode to check if data available(thomas 11.05.08)</li>
   <li>feature: added ws2000 support via 87_WS2000.pm(thomas 10.05.08)</li>
@@ -78,7 +78,8 @@ Currently implemented features:<br>
   <li>reading attached SCIVT devices</li>
   <li>reading attached M232 devices</li>
   <li>reading attached WS2000/WS25000 devices, also via raw network converters(xport)</li>
-  <li>logging events to files or databases
+  <li>extract sensor data from IPWE networked weather data receiver</li>
+  <li>logging events to files or databases</li>
   <li>logging events to files or databases, with regexp filters</li>
   <li>notifying external programs or internal modules when receiving certain
       events</li>
